hn_tests/opt/failing/allDigits-ho-2.hn
allDigits ss = {
	comp f g = {
		h x = f (g x)
		h
	}
	loopCond = comp incr incr
	loopCond ss
}